--- a/src/styles/exchange.less
+++ b/src/styles/exchange.less
@@ -23,32 +23,42 @@
 			margin-top: 20px;
 		}
 
-		&--100 {
+		&-100 {
 			.banknote {
 				background-color: #cebdce;
 			}
 		}
 
-		&--500 {
+		&-500 {
 			.banknote {
 				background-color: #cebdce;
 			}
 		}
 
-		&--1000 {
+		&-1000 {
 			.banknote {
-				background-color: #cebdce;
+				background-color: fade(#8FCC02, 33%);
 			}
 		}
 
-		&--5000 {
+		&-5000 {
 			.banknote {
-				background-color: #cebdce;
+				background-color: fade(#CC6602, 33%);
 			}
+		}
+	}
+
+	&-number {
+
+		&__x {
+			margin-left: 10px;
 		}
 	}
 }
 
 .banknote {
-
+	padding: 10px 0;
+	width: 92px;
+	display: inline-block;
+	text-align: center;
 }
