its done for now

--- a/src/templates/exchange.pug
+++ b/src/templates/exchange.pug
@@ -1,13 +1,13 @@
 include parts/head.pug
 body.exchange
 	include parts/header.pug
-	.sum 3000 ₽
+	.sum 
 	.banknotes
-		.banknotes__row.banknotes__row-100
-			span.banknote 100 ₽
-			span.banknotes-number 
-				span.banknotes-number__x × 
-				span.banknotes-number__number 0
+		//- .banknotes__row.banknotes__row-100
+		//- 	span.banknote 100 ₽
+		//- 	span.banknotes-number 
+		//- 		span.banknotes-number__x × 
+		//- 		span.banknotes-number__number 0
 		.banknotes__row.banknotes__row-500
 			span.banknote 500 ₽
 			span.banknotes-number 
