--- a/src/styles/exchange.less
+++ b/src/styles/exchange.less
@@ -1,6 +1,6 @@
 .sum {
 	.big_text;
-	margin-top: 39px;
+	margin-top: 72px;
 	padding-left: 30px;
 }
 
@@ -18,6 +18,7 @@
 	.paragraph_text;
 
 	&__row {
+		// display: none;
 
 		& + & {
 			margin-top: 20px;
