--- a/src/styles/fonts.less
+++ b/src/styles/fonts.less
@@ -1,15 +1,41 @@
+/** Ultra Light */
 @font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto-regular-cyr-ext.woff2) format('woff2');
-  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+  font-family: "San Francisco";
+  font-weight: 100;
+  src: url("../fonts/sanfranciscodisplay-ultralight-webfont.woff");
 }
 
+/** Thin */
 @font-face {
-  font-family: 'Roboto';
-  font-style: normal;
+  font-family: "San Francisco";
+  font-weight: 200;
+  src: url("../fonts/sanfranciscodisplay-thin-webfont.woff");
+}
+
+/** Regular */
+@font-face {
+  font-family: "San Francisco";
   font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto-regular-latin.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+  src: url("../fonts/sanfranciscodisplay-regular-webfont.woff");
+}
+
+/** Medium */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 500;
+  src: url("../fonts/sanfranciscodisplay-medium-webfont.woff");
+}
+
+/** Semi Bold */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 600;
+  src: url("../fonts/sanfranciscodisplay-semibold-webfont.woff");
+}
+
+/** Bold */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 700;
+  src: url("../fonts/sanfranciscodisplay-bold-webfont.woff");
 }
