--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -8,12 +8,13 @@ html {
 }
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: "San Francisco", sans-serif;
+    color: fade(@primary, 90%);
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	overflow-x: hidden;
-	// width: 800px;
-	// height: 600px;
+	width: 800px;
+	height: 600px;
 	position: relative;
 }
 
@@ -21,115 +22,171 @@ a {
 	text-decoration: none;
 }
 
-.wrapper {
-
-}
-
 .title {
 	.big_text;
+    position: absolute;
 
-	&--top-left {
-		margin-top: 39px;
-		padding-left: 30px;
+	&--left {
+		left: 30px;
 	}
 
-	&--center-center {
-		margin-top: 163px;
-		text-align: center;
+	&--right {
+		right: 30px;
+	}
+
+    &--top-sum {
+        top: 173px;
+    }
+}
+
+.subtitle {
+	color: fade(@primary, 70%);
+	position: absolute;
+	transition: color .2s ease-in-out;
+
+	&-sum {
+		top: 217px;
+		left: 30px;
+		font-size: 18px;
+		line-height: 22px;
+	}
+
+	&-return {
+		left: 430px;
+		top: 278px;
+		font-size: 22px;
+		line-height: 30px;
+	}
+
+	&--error {
+		color: @error;
+		animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
 	}
 }
 
 .button {
-	position: absolute;
-	font-size: 22px;
-	padding: 20px 16px;
-	border: 4px solid #ccc;
-	width: 4 + 370px;
-	color: black;
-	background: #ffffff;
-	background: -moz-linear-gradient(top, #ffffff 0%, #d7d7d7 100%);
-	background: -webkit-linear-gradient(top, #ffffff 0%,#d7d7d7 100%);
-	background: linear-gradient(to bottom, #ffffff 0%,#d7d7d7 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d7d7d7',GradientType=0 );
+    position: absolute;
+    font-size: 22px;
+    padding: 24px 16px;
+    border-radius: 13px;
+    width: 338px;
+    text-align: center;
+    background: #f6f7f8;
+    font-weight: @medium;
+    cursor: pointer;
+    background: -moz-linear-gradient(top, #f6f7f8 0%, #e3e6ea 100%);
+    background: -webkit-linear-gradient(top, #f6f7f8 0%,#e3e6ea 100%);
+    background: linear-gradient(to bottom, #f6f7f8 0%,#e3e6ea 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f7f8', endColorstr='#e3e6ea',GradientType=0 );
 
-	&--left {
-		left: 0;
-		border-radius: 0 7px 7px 0;
-		border-left: none;
-	}
+    &--left {
+        left: 30px;
+        border-left: none;
+    }
 
-	&--right {
-		right: 0;
-		border-radius: 7px 0 0 7px;
-		border-right: none;
-	}
+    &--right {
+        right: 30px;
+        border-right: none;
+    }
 
-	&--success {
-		border-color: #8FCC02;
-	}
+    &--success {
+        background: #ff7156;
+        color: white;
+        background: -moz-linear-gradient(top, #ff7156 0%, #f73c33 100%);
+        background: -webkit-linear-gradient(top, #ff7156 0%,#f73c33 100%);
+        background: linear-gradient(to bottom, #ff7156 0%,#f73c33 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7156', endColorstr='#f73c33',GradientType=0 );
+    }
 
-	&--1 {
-		top: 211px;
-	}
+    &--disabled {
+        color: fade(@primary, 30%);
+        cursor: not-allowed;
+    }
 
-	&--2 {
-		top: 313px;
-	}
+    &--1 {
+        top: 211px;
+    }
 
-	&--3 {
-		top: 415px;
-	}
+    &--2 {
+        top: 313px;
+    }
 
-	&--4 {
-		top: 517px;
-	}
+    &--3 {
+        top: 415px;
+    }
 
-	&--icon {
-		padding-left: 16 + 20 + 16px;
+    &--4 {
+        top: 517px;
+    }
+}
 
-		&:before {
-			content: '';
-			position: absolute;
-			left: 16px;
-			background-size: cover;
-			display: inline-block;
-		}
-	}
+.back {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    width: 70px;
+    height: 70px;
+    top: 30px;
+    left: 30px;
+    background: #f6f7f8;
+    cursor: pointer;
+    background: -moz-linear-gradient(top, #f6f7f8 0%, #e3e6ea 100%);
+    background: -webkit-linear-gradient(top, #f6f7f8 0%,#e3e6ea 100%);
+    background: linear-gradient(to bottom, #f6f7f8 0%,#e3e6ea 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f7f8', endColorstr='#e3e6ea',GradientType=0 );
 
-	&--icon-back {
-		&:before {
-			background-image: url(../images/back.png);
-			width: 30px;
-			height: 22px;
-		}
-	}
+    svg {
+        stroke: fade(@primary, 90%);
+    }
+}
 
-	&--icon-plus {
-		&:before {
-			background-image: url(../images/plus.png);
-			width: 22px;
-			height: 22px;
-		}
-	}
+.input-wrapper {
+    position: absolute;
+    top: 283px;
+    left: 30px;
+    font-size: 36px;
+    font-weight: @medium;
+}
 
-	&--icon-minus {
-		&:before {
-			background-image: url(../images/minus.png);
-			width: 22px;
-			height: 3px;
-			transform: translate(0,9px);
-		}
-	}
+.input-span {
+    position: absolute;
+    visibility: hidden;
+    height: auto;
+    width: auto;
+    white-space: nowrap;
 }
 
 
 
 .rouble {
-	.big_text;
-	margin-left: 10px;
+    display: inline-block;
+    font-size: 36px;
+    font-weight: @regular;
+    transition: transform .2s ease-in-out, color .2s ease-in-out;
+	transform: translate(10px, 0);
 
 	&--grey {
-		margin: 0;
 		color: #BDBDBD;
 	}
+}
+
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(1px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(1px, 0, 0);
+  }
 }
