--- a/src/styles/vars.less
+++ b/src/styles/vars.less
@@ -1,7 +1,15 @@
 @alfared: #EF3124;
+@primary: #0A1E32;
+@error: #FF4B3E;
+
+@regular: 400;
+@medium: 500;
+@bold: 700;
 
 .big_text {
-	font-size: 36px;
+	font-size: 30px;
+    line-height: 35px;
+    font-weight: @bold;
 }
 
 .paragraph_text {
