--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -2,5 +2,7 @@
 @import 'reset';
 @import 'global';
 @import 'fonts';
+@import 'animations';
 @import 'type';
 @import 'exchange';
+@import 'withdraw';
