--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,25 +1,12 @@
 include parts/head.pug
 body.initial
-	.back
-		svg(width='34px', height='26px', viewbox='0 0 34 26')
-			g(transform='translate(2.000000, 2.000000)', stroke-width='3.4000001', fill='none', fill-rule='evenodd', stroke-linecap='round', stroke-linejoin='round')
-				polyline(points='11.0322173 0 0 10.8281451 11.0322173 21.5737789')
-				path(d='M2.20491803,10.66 L29.3613922,10.66')
-	.title.title--left.title--top-sum Введите сумму
-	.subtitle.subtitle-sum Вы можете снять от 100 ₽ до 200 000 ₽
-	.input-wrapper
-		span.input-cash
-		span.rouble.rouble--grey ₽
-	.buttons-actions
-		.button.button--left.button--4.button--icon Выбрать размен
-		a(href="type.html").button.button--right.button--4.button--success Подтвердить
-	.buttons-sums.buttons-sums--active
-		.button.button-sum 500 ₽
-		.button.button-sum 1000 ₽
-		.button.button-sum 2000 ₽
-		.button.button-sum 3000 ₽
-		.button.button-sum 5000 ₽
-		.button.button-sum 10000 ₽
-		.button.button-sum 15000 ₽
+	.atm
+		.title.title--left.title--top-sum Выберите действие
+		.button.button--left.button--2 Оплата услуг
+		.button.button--left.button--3 Внесение наличных
+		.button.button--left.button--4 Погашение кредита
+		a(href="withdraw.html").button.button--right.button--2 Снятие наличных
+		.button.button--right.button--3 Запрос остатка
+		.button.button--right.button--4 Другие операции
 	
 include parts/footer.pug
