--- a/src/templates/exchange.pug
+++ b/src/templates/exchange.pug
@@ -1,34 +1,34 @@
 include parts/head.pug
 body.exchange
-	.sum 
-	.banknotes
-		//- .banknotes__row.banknotes__row-100
-		//- 	span.banknote 100 ₽
-		//- 	span.banknotes-number 
-		//- 		span.banknotes-number__x × 
-		//- 		span.banknotes-number__number 0
-		.banknotes__row.banknotes__row-500
-			span.banknote 500 ₽
-			span.banknotes-number 
-				span.banknotes-number__x × 
-				span.banknotes-number__number 5
-		.banknotes__row.banknotes__row-1000
-			span.banknote 5 000 ₽
-			span.banknotes-number 
-				span.banknotes-number__x × 
-				span.banknotes-number__number 5
-		.banknotes__row.banknotes__row-5000
-			span.banknote 5 000 ₽
-			span.banknotes-number 
-				span.banknotes-number__x × 
-				span.banknotes-number__number 5
-	.available-banknotes 
-		|В банкомате есть купюры 
-		br
-		| 500 ₽, 1 000 ₽ и 5 000 ₽
-	a(href="type.html").button.button--left.button--4.button--icon.button--icon-back Назад
-	.button.button--right.button--2.button--icon.button--icon-plus Крупнее
-	.button.button--right.button--3.button--icon.button--icon-minus Мельче
-	.button.button--right.button--4.button--success.button-apply Получить
+	.atm
+		a(href="withdraw.html").back
+			svg(width='34px', height='26px', viewbox='0 0 34 26')
+				g(transform='translate(2.000000, 2.000000)', stroke-width='3.4000001', fill='none', fill-rule='evenodd', stroke-linecap='round', stroke-linejoin='round')
+					polyline(points='11.0322173 0 0 10.8281451 11.0322173 21.5737789')
+					path(d='M2.20491803,10.66 L29.3613922,10.66')
+		.banknotes
+			.banknotes__row.banknotes__row-100
+				span.banknote 100 ₽
+				span.banknotes-number 
+					span.banknotes-number__x × 
+					span.banknotes-number__number 0
+			.banknotes__row.banknotes__row-500
+				span.banknote 500 ₽
+				span.banknotes-number 
+					span.banknotes-number__x × 
+					span.banknotes-number__number 5
+			.banknotes__row.banknotes__row-1000
+				span.banknote 5 000 ₽
+				span.banknotes-number 
+					span.banknotes-number__x × 
+					span.banknotes-number__number 5
+			.banknotes__row.banknotes__row-5000
+				span.banknote 5 000 ₽
+				span.banknotes-number 
+					span.banknotes-number__x × 
+					span.banknotes-number__number 5
+		.button.button--right.button--2.button--icon.button--icon-plus Крупнее
+		.button.button--right.button--3.button--icon.button--icon-minus Мельче
+		.button.button--right.button--4.button--success.button-apply Подтвердить
 	
 include parts/footer.pug
