--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -12,7 +12,7 @@ body {
 	color: fade(@primary, 90%);
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
-	overflow-x: hidden;
+	overflow: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
