--- a/src/templates/exchange.pug
+++ b/src/templates/exchange.pug
@@ -45,6 +45,6 @@ body.exchange
 		.exchange-buttons
 			.button.exchange-buttons__larger.button--disabled Крупнее
 			.button.exchange-buttons__smaller Мельче
-		.button.button--right.button--4.button--success.button-apply Подтвердить
+		a(href="success.html").button.button--right.button--4.button--success.button-apply Подтвердить
 	
 include parts/footer.pug
