prototype 2 already works

--- a/src/styles/exchange.less
+++ b/src/styles/exchange.less
@@ -44,7 +44,8 @@
 		transform: translate(0, 10px);
 		margin-bottom: 0px;
 		height: 0;
-		transition: transform .35s ease-in-out, opacity .35s ease-in-out, height .35s ease-in-out;
+		transition: transform .35s ease-in-out, opacity .35s ease-in-out,
+			height .35s ease-in-out;
 
 		&-5000 {
 			transform: translate(0, 10px);
@@ -91,7 +92,8 @@
 		padding-left: 3px;
 	}
 
-	&__left, &__right {
+	&__left,
+	&__right {
 		width: 16px;
 		height: 36px;
 	}
@@ -105,18 +107,18 @@
 	}
 
 	&-100 {
-		background-color: #C3AB80;
+		background-color: #c3ab80;
 	}
 
 	&-500 {
-		background-color: #98748B;
+		background-color: #98748b;
 	}
 
 	&-1000 {
-		background-color: #9CB1B3;
+		background-color: #9cb1b3;
 	}
 
 	&-5000 {
-		background-color: fade(#CC6602, 50%);
+		background-color: #dd8e5a;
 	}
 }
