--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -2,11 +2,11 @@ include parts/head.pug
 body.initial
 	.atm
 		.title.title--left.title--top-sum Выберите действие
-		.button.button--left.button--2 Оплата услуг
-		.button.button--left.button--3 Внесение наличных
-		.button.button--left.button--4 Погашение кредита
-		a(href="withdraw.html").button.button--right.button--2 Снятие наличных
-		.button.button--right.button--3 Запрос остатка
-		.button.button--right.button--4 Другие операции
+		.button.button--left.button--left-align.button--icon.button--icon-card.button--2 Оплата услуг
+		.button.button--left.button--left-align.button--icon.button--icon-transfer-in.button--3 Внесение наличных
+		.button.button--left.button--left-align.button--icon.button--icon-expences.button--4 Погашение кредита
+		a(href="withdraw.html").button.button--right.button--left-align.button--icon.button--icon-transfer.button--2 Снятие наличных
+		.button.button--right.button--left-align.button--icon.button--icon-account.button--3 Запрос остатка
+		.button.button--right.button--left-align.button--icon.button--icon-other.button--4 Другие операции
 	
 include parts/footer.pug
