--- a/src/templates/withdraw.pug
+++ b/src/templates/withdraw.pug
@@ -6,6 +6,8 @@ body.withdraw
 				g(transform='translate(2.000000, 2.000000)', stroke-width='3.4000001', fill='none', fill-rule='evenodd', stroke-linecap='round', stroke-linejoin='round')
 					polyline(points='11.0322173 0 0 10.8281451 11.0322173 21.5737789')
 					path(d='M2.20491803,10.66 L29.3613922,10.66')
+		a(href="pick.html").sub-link Выбрать вручную
+			img(src="images/pick-banknotes.svg", alt="")
 		.title.title--left.title--top-sum Введите сумму
 		.subtitle.subtitle-sum Вы можете снять от 100 ₽ до 200 000 ₽
 		.button.chosen-value
