--- a/src/templates/exchange.pug
+++ b/src/templates/exchange.pug
@@ -43,8 +43,8 @@ body.exchange
 					span.banknotes-number__number 0
 			
 		.exchange-buttons
-			.button.exchange-buttons__larger.button--disabled Крупнее
-			.button.exchange-buttons__smaller Мельче
+			.button.exchange-buttons__larger.button--disabled.button--icon.button--icon-arrow-up.button--left-align Крупнее
+			.button.exchange-buttons__smaller.button--icon.button--icon-arrow-down.button--left-align Мельче
 		a(href="success.html").button.button--right.button--4.button--success.button-apply Подтвердить
 	
 include parts/footer.pug
