--- a/src/templates/pick.pug
+++ b/src/templates/pick.pug
@@ -29,6 +29,11 @@ body.pick
 			span.picker-sum__value
 			span.rouble ₽
 		.picker-clear Очистить 
+		.picked
+			.picked-100.picked__pack
+			.picked-500.picked__pack
+			.picked-1000.picked__pack
+			.picked-5000.picked__pack
 		.button.button--right.button--4.button--success.button--disabled Подтвердить
 	
 include parts/footer.pug
