--- a/src/templates/withdraw.pug
+++ b/src/templates/withdraw.pug
@@ -21,7 +21,7 @@ body.withdraw
 			span.input-cash
 			span.rouble.rouble--grey ₽
 		.buttons-actions
-			a(href="exchange.html").button.button--left.button--4.button-exchange Выбрать размен
+			//- a(href="exchange.html").button.button--left.button--4.button-exchange Выбрать размен
 			a(href="success.html").button.button--right.button--4.button--success Подтвердить
 		.buttons-sums.buttons-sums--active
 			.button.button-sum 
