--- a/src/styles/pick.less
+++ b/src/styles/pick.less
@@ -61,7 +61,7 @@
 
 	&__pack {
 		display: block;
-		// transition: width .2s ease-in-out;
+		transition: width .2s ease-in-out;
 
 		&--active {
 			width: 25%;
@@ -79,9 +79,6 @@
 @keyframes new-banknote {
 	0% {
 		transform: scale(1) translate(0, -250px);
-	}
-	33% {
-		transform: perspective(150px) rotateX(-20deg);
 	}
 	100% {
 		transform: scale(0.7) translate(0, 0);
